force-app/main/default/objects/VTXY_UsageRecord__c/VTXY_UsageRecord__c.object-meta.xml
<CustomObject>
    <label>Usage Record</label>
    <nameField>
        <label>Usage Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>