force-app/main/default/objects/VTXY_UsageRecord__c/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>CurrencyIsoCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>