force-app/main/default/objects/VTXY_UsageRecord__c/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <label>Duration_Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>