force-app/main/default/objects/VTXY_UsageRecord__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event_Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CallMinute</fullName>
            </value>
            <value>
                <fullName>RecordingMinute</fullName>
            </value>
            <value>
                <fullName>BroadcastMessage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>