force-app/main/default/objects/VTXY_UsageRecord__c/fields/Provider_License__c.field-meta.xml
<CustomField>
    <fullName>Provider_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider License</label>
    <referenceTo>VTXY_ProviderLicense__c</referenceTo>
    <relationshipLabel>UsageRecords</relationshipLabel>
    <relationshipName>UsageRecords</relationshipName>
    <type>Lookup</type>
</CustomField>