force-app/main/default/objects/VTXY_UsageRecord__c/fields/Rating_Status__c.field-meta.xml
<CustomField>
    <fullName>Rating_Status__c</fullName>
    <label>Rating_Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rated</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Error.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>