force-app/main/default/objects/VTXY_UsageRecord__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start_Time</label>
    <type>Time</type>
</CustomField>