force-app/main/default/objects/VTXY_UsageRecord__c/fields/Unit_c__c.field-meta.xml
<CustomField>
    <fullName>Unit_c__c</fullName>
    <label>Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minute</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Message</fullName>
            </value>
            <value>
                <fullName>Seat.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>